ChartDSLParser.py
# Generated from ChartDSL.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ChartDSLParser ( Parser ):

    grammarFileName = "ChartDSL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'with'", "'from'", "'chart:'", "'compare'", 
                     "'for'", "'differences'", "'contrast'", "'versus'", 
                     "'split by'", "'grouped by'", "'differences within'", 
                     "'show'", "'stacked by'", "'subgroups'", "'show correlation between'", 
                     "'and'", "'log'", "'show proportion of'", "'by'", "'show share of'", 
                     "'show percentage of'", "'show frequency of'", "'show distribution of'", 
                     "'show frequency in'", "'buckets'", "'accumulation of'", 
                     "'stacked trend of'", "'scatter plot of'", "'pattern of'", 
                     "'bubble of'", "','", "'at'", "'to'", "'progression of'", 
                     "'trend of'", "'growth of'", "'while'", "'('", "')'", 
                     "':'", "'if'", "'!'", "'or'", "'+'", "'-'", "'*'", 
                     "'/'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", 
                     "'BEGIN'", "'END'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "START_PROGRAM", "END_PROGRAM", 
                      "IDENTIFIER", "WS" ]

    RULE_command = 0
    RULE_chartFunction = 1
    RULE_table = 2
    RULE_var = 3
    RULE_data = 4
    RULE_subgroup = 5
    RULE_cases = 6
    RULE_continuousVar = 7
    RULE_range = 8
    RULE_trendKeyword = 9
    RULE_loop = 10
    RULE_conditionalStatement = 11
    RULE_condition = 12
    RULE_logicalOperation = 13
    RULE_operationBody = 14
    RULE_operation = 15
    RULE_operationSign = 16
    RULE_logicalOperationSign = 17

    ruleNames =  [ "command", "chartFunction", "table", "var", "data", "subgroup", 
                   "cases", "continuousVar", "range", "trendKeyword", "loop", 
                   "conditionalStatement", "condition", "logicalOperation", 
                   "operationBody", "operation", "operationSign", "logicalOperationSign" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    START_PROGRAM=54
    END_PROGRAM=55
    IDENTIFIER=56
    WS=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def START_PROGRAM(self):
            return self.getToken(ChartDSLParser.START_PROGRAM, 0)

        def data(self):
            return self.getTypedRuleContext(ChartDSLParser.DataContext,0)


        def table(self):
            return self.getTypedRuleContext(ChartDSLParser.TableContext,0)


        def chartFunction(self):
            return self.getTypedRuleContext(ChartDSLParser.ChartFunctionContext,0)


        def END_PROGRAM(self):
            return self.getToken(ChartDSLParser.END_PROGRAM, 0)

        def getRuleIndex(self):
            return ChartDSLParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)




    def command(self):

        localctx = ChartDSLParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_command)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(ChartDSLParser.START_PROGRAM)
            self.state = 37
            self.match(ChartDSLParser.T__0)
            self.state = 38
            self.data()
            self.state = 39
            self.match(ChartDSLParser.T__1)
            self.state = 40
            self.table()
            self.state = 41
            self.match(ChartDSLParser.T__2)
            self.state = 42
            self.chartFunction()
            self.state = 43
            self.match(ChartDSLParser.END_PROGRAM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ChartFunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ChartDSLParser.VarContext)
            else:
                return self.getTypedRuleContext(ChartDSLParser.VarContext,i)


        def cases(self):
            return self.getTypedRuleContext(ChartDSLParser.CasesContext,0)


        def subgroup(self):
            return self.getTypedRuleContext(ChartDSLParser.SubgroupContext,0)


        def continuousVar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ChartDSLParser.ContinuousVarContext)
            else:
                return self.getTypedRuleContext(ChartDSLParser.ContinuousVarContext,i)


        def trendKeyword(self):
            return self.getTypedRuleContext(ChartDSLParser.TrendKeywordContext,0)


        def range_(self):
            return self.getTypedRuleContext(ChartDSLParser.RangeContext,0)


        def getRuleIndex(self):
            return ChartDSLParser.RULE_chartFunction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChartFunction" ):
                listener.enterChartFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChartFunction" ):
                listener.exitChartFunction(self)




    def chartFunction(self):

        localctx = ChartDSLParser.ChartFunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_chartFunction)
        try:
            self.state = 169
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 45
                self.match(ChartDSLParser.T__3)
                self.state = 46
                self.var()
                self.state = 47
                self.match(ChartDSLParser.T__4)
                self.state = 48
                self.cases()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 50
                self.match(ChartDSLParser.T__5)
                self.state = 51
                self.var()
                self.state = 52
                self.match(ChartDSLParser.T__4)
                self.state = 53
                self.cases()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 55
                self.match(ChartDSLParser.T__6)
                self.state = 56
                self.var()
                self.state = 57
                self.match(ChartDSLParser.T__4)
                self.state = 58
                self.cases()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 60
                self.match(ChartDSLParser.T__7)
                self.state = 61
                self.var()
                self.state = 62
                self.match(ChartDSLParser.T__4)
                self.state = 63
                self.cases()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 65
                self.match(ChartDSLParser.T__3)
                self.state = 66
                self.var()
                self.state = 67
                self.match(ChartDSLParser.T__8)
                self.state = 68
                self.subgroup()
                self.state = 69
                self.match(ChartDSLParser.T__4)
                self.state = 70
                self.cases()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 72
                self.match(ChartDSLParser.T__3)
                self.state = 73
                self.var()
                self.state = 74
                self.match(ChartDSLParser.T__9)
                self.state = 75
                self.subgroup()
                self.state = 76
                self.match(ChartDSLParser.T__4)
                self.state = 77
                self.cases()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 79
                self.match(ChartDSLParser.T__10)
                self.state = 80
                self.subgroup()
                self.state = 81
                self.match(ChartDSLParser.T__4)
                self.state = 82
                self.cases()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 84
                self.match(ChartDSLParser.T__11)
                self.state = 85
                self.var()
                self.state = 86
                self.match(ChartDSLParser.T__12)
                self.state = 87
                self.subgroup()
                self.state = 88
                self.match(ChartDSLParser.T__4)
                self.state = 89
                self.cases()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 91
                self.match(ChartDSLParser.T__11)
                self.state = 92
                self.var()
                self.state = 93
                self.match(ChartDSLParser.T__13)
                self.state = 94
                self.subgroup()
                self.state = 95
                self.match(ChartDSLParser.T__4)
                self.state = 96
                self.cases()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 98
                self.match(ChartDSLParser.T__14)
                self.state = 99
                self.continuousVar()
                self.state = 100
                self.match(ChartDSLParser.T__15)
                self.state = 101
                self.continuousVar()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 103
                self.match(ChartDSLParser.T__16)
                self.state = 104
                self.trendKeyword()
                self.state = 105
                self.continuousVar()
                self.state = 106
                self.match(ChartDSLParser.T__1)
                self.state = 107
                self.range_()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 109
                self.match(ChartDSLParser.T__17)
                self.state = 110
                self.var()
                self.state = 111
                self.match(ChartDSLParser.T__18)
                self.state = 112
                self.cases()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 114
                self.match(ChartDSLParser.T__19)
                self.state = 115
                self.var()
                self.state = 116
                self.match(ChartDSLParser.T__18)
                self.state = 117
                self.cases()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 119
                self.match(ChartDSLParser.T__20)
                self.state = 120
                self.var()
                self.state = 121
                self.match(ChartDSLParser.T__18)
                self.state = 122
                self.cases()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 124
                self.match(ChartDSLParser.T__21)
                self.state = 125
                self.var()
                self.state = 126
                self.match(ChartDSLParser.T__18)
                self.state = 127
                self.range_()
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 129
                self.match(ChartDSLParser.T__22)
                self.state = 130
                self.var()
                self.state = 131
                self.match(ChartDSLParser.T__18)
                self.state = 132
                self.range_()
                pass

            elif la_ == 17:
                self.enterOuterAlt(localctx, 17)
                self.state = 134
                self.match(ChartDSLParser.T__23)
                self.state = 135
                self.range_()
                self.state = 136
                self.match(ChartDSLParser.T__24)
                pass

            elif la_ == 18:
                self.enterOuterAlt(localctx, 18)
                self.state = 138
                self.match(ChartDSLParser.T__25)
                self.state = 139
                self.continuousVar()
                self.state = 140
                self.match(ChartDSLParser.T__4)
                self.state = 141
                self.cases()
                self.state = 142
                self.match(ChartDSLParser.T__1)
                self.state = 143
                self.range_()
                pass

            elif la_ == 19:
                self.enterOuterAlt(localctx, 19)
                self.state = 145
                self.match(ChartDSLParser.T__26)
                self.state = 146
                self.continuousVar()
                self.state = 147
                self.match(ChartDSLParser.T__4)
                self.state = 148
                self.cases()
                pass

            elif la_ == 20:
                self.enterOuterAlt(localctx, 20)
                self.state = 150
                self.match(ChartDSLParser.T__27)
                self.state = 151
                self.var()
                self.state = 152
                self.match(ChartDSLParser.T__15)
                self.state = 153
                self.var()
                pass

            elif la_ == 21:
                self.enterOuterAlt(localctx, 21)
                self.state = 155
                self.match(ChartDSLParser.T__28)
                self.state = 156
                self.var()
                self.state = 157
                self.match(ChartDSLParser.T__15)
                self.state = 158
                self.var()
                pass

            elif la_ == 22:
                self.enterOuterAlt(localctx, 22)
                self.state = 160
                self.match(ChartDSLParser.T__29)
                self.state = 161
                self.var()
                self.state = 162
                self.match(ChartDSLParser.T__30)
                self.state = 163
                self.var()
                self.state = 164
                self.match(ChartDSLParser.T__30)
                self.state = 165
                self.var()
                self.state = 166
                self.match(ChartDSLParser.T__4)
                self.state = 167
                self.cases()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ChartDSLParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return ChartDSLParser.RULE_table

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTable" ):
                listener.enterTable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTable" ):
                listener.exitTable(self)




    def table(self):

        localctx = ChartDSLParser.TableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_table)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(ChartDSLParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ChartDSLParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return ChartDSLParser.RULE_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar" ):
                listener.enterVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar" ):
                listener.exitVar(self)




    def var(self):

        localctx = ChartDSLParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.match(ChartDSLParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DataContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ChartDSLParser.VarContext)
            else:
                return self.getTypedRuleContext(ChartDSLParser.VarContext,i)


        def continuousVar(self):
            return self.getTypedRuleContext(ChartDSLParser.ContinuousVarContext,0)


        def getRuleIndex(self):
            return ChartDSLParser.RULE_data

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterData" ):
                listener.enterData(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitData" ):
                listener.exitData(self)




    def data(self):

        localctx = ChartDSLParser.DataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_data)
        try:
            self.state = 181
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 175
                self.var()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 176
                self.continuousVar()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 177
                self.var()
                self.state = 178
                self.match(ChartDSLParser.T__31)
                self.state = 179
                self.var()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubgroupContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ChartDSLParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return ChartDSLParser.RULE_subgroup

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubgroup" ):
                listener.enterSubgroup(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubgroup" ):
                listener.exitSubgroup(self)




    def subgroup(self):

        localctx = ChartDSLParser.SubgroupContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_subgroup)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self.match(ChartDSLParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CasesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ChartDSLParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return ChartDSLParser.RULE_cases

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCases" ):
                listener.enterCases(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCases" ):
                listener.exitCases(self)




    def cases(self):

        localctx = ChartDSLParser.CasesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_cases)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            self.match(ChartDSLParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContinuousVarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(ChartDSLParser.IDENTIFIER)
            else:
                return self.getToken(ChartDSLParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return ChartDSLParser.RULE_continuousVar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContinuousVar" ):
                listener.enterContinuousVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContinuousVar" ):
                listener.exitContinuousVar(self)




    def continuousVar(self):

        localctx = ChartDSLParser.ContinuousVarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_continuousVar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 187
            self.match(ChartDSLParser.IDENTIFIER)
            self.state = 192
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==31:
                self.state = 188
                self.match(ChartDSLParser.T__30)
                self.state = 189
                self.match(ChartDSLParser.IDENTIFIER)
                self.state = 194
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RangeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(ChartDSLParser.IDENTIFIER)
            else:
                return self.getToken(ChartDSLParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return ChartDSLParser.RULE_range

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRange" ):
                listener.enterRange(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRange" ):
                listener.exitRange(self)




    def range_(self):

        localctx = ChartDSLParser.RangeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_range)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 195
            self.match(ChartDSLParser.IDENTIFIER)
            self.state = 196
            self.match(ChartDSLParser.T__32)
            self.state = 197
            self.match(ChartDSLParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TrendKeywordContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ChartDSLParser.RULE_trendKeyword

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTrendKeyword" ):
                listener.enterTrendKeyword(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTrendKeyword" ):
                listener.exitTrendKeyword(self)




    def trendKeyword(self):

        localctx = ChartDSLParser.TrendKeywordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_trendKeyword)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 199
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 120259084288) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(ChartDSLParser.ConditionContext,0)


        def getRuleIndex(self):
            return ChartDSLParser.RULE_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoop" ):
                listener.enterLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoop" ):
                listener.exitLoop(self)




    def loop(self):

        localctx = ChartDSLParser.LoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_loop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 201
            self.match(ChartDSLParser.T__36)
            self.state = 202
            self.match(ChartDSLParser.T__37)
            self.state = 203
            self.condition(0)
            self.state = 204
            self.match(ChartDSLParser.T__38)
            self.state = 205
            self.match(ChartDSLParser.T__39)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionalStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(ChartDSLParser.ConditionContext,0)


        def getRuleIndex(self):
            return ChartDSLParser.RULE_conditionalStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionalStatement" ):
                listener.enterConditionalStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionalStatement" ):
                listener.exitConditionalStatement(self)




    def conditionalStatement(self):

        localctx = ChartDSLParser.ConditionalStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_conditionalStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 207
            self.match(ChartDSLParser.T__40)
            self.state = 208
            self.match(ChartDSLParser.T__37)
            self.state = 209
            self.condition(0)
            self.state = 210
            self.match(ChartDSLParser.T__38)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalOperation(self):
            return self.getTypedRuleContext(ChartDSLParser.LogicalOperationContext,0)


        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ChartDSLParser.ConditionContext)
            else:
                return self.getTypedRuleContext(ChartDSLParser.ConditionContext,i)


        def getRuleIndex(self):
            return ChartDSLParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)



    def condition(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ChartDSLParser.ConditionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 24
        self.enterRecursionRule(localctx, 24, self.RULE_condition, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 220
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 213
                self.logicalOperation()
                pass

            elif la_ == 2:
                self.state = 214
                self.match(ChartDSLParser.T__41)
                self.state = 215
                self.condition(3)
                pass

            elif la_ == 3:
                self.state = 216
                self.match(ChartDSLParser.T__37)
                self.state = 217
                self.condition(0)
                self.state = 218
                self.match(ChartDSLParser.T__38)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 227
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = ChartDSLParser.ConditionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_condition)
                    self.state = 222
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 223
                    _la = self._input.LA(1)
                    if not(_la==16 or _la==43):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 224
                    self.condition(3) 
                self.state = 229
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class LogicalOperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operationBody(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ChartDSLParser.OperationBodyContext)
            else:
                return self.getTypedRuleContext(ChartDSLParser.OperationBodyContext,i)

